--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -6,7 +6,9 @@ info.eureka.port=5678
 server.port=5680
 
 # eureka
-eureka.client.serviceUrl.defaultZone=http://${info.eureka.host}:${info.eureka.port}/eureka/
+# eureka.client.serviceUrl.defaultZone=http://${info.eureka.host}:${info.eureka.port}/eureka/
+# 公益eureka
+eureka.client.serviceUrl.defaultZone=http://eureka.didispace.com/eureka/
 eureka.instance.prefer-ip-address=true
 
 spring.application.name=consumer
