--- a/zuul/src/main/resources/application.properties
+++ b/zuul/src/main/resources/application.properties
@@ -28,3 +28,6 @@ zuul.routes.consumer.strip-prefix=true
 zuul.routes.provider.path=/provider/**
 zuul.routes.provider.service-id=provider-service
 zuul.routes.provider.strip-prefix=true
+
+# 请求处理的超时时间
+ribbon.ReadTimeout: 60000
