--- a/consumer/src/main/resources/bootstrap.properties
+++ b/consumer/src/main/resources/bootstrap.properties
@@ -23,3 +23,11 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 # ribbon的超时时间
 ribbon.ReadTimeout=10000
 ribbon.ConnectTimeout=10000
+
+spring.profiles.active=test
+
+# spring cloud config client
+spring.cloud.config.profile=${spring.profiles.active}
+spring.cloud.config.label=master
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=wwy-configs
