--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>provider-service</module>
         <module>consumer</module>
         <module>zuul</module>
+        <module>config</module>
     </modules>
 
     <groupId>cc.wangweiye</groupId>
