--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -14,7 +14,7 @@ eureka.instance.prefer-ip-address=true
 # application
 spring.application.name=wwy-configs
 
-spring.cloud.config.server.git.uri=https://gitee.com/doublew/config-repo/
+spring.cloud.config.server.git.uri=https://gitee.com/doublew/config-repo
 spring.cloud.config.server.git.search-paths=${spring.application.name}
 spring.cloud.config.server.git.username=
 spring.cloud.config.server.git.password=
