--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -32,6 +32,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>cc.wangweiye</groupId>
+            <artifactId>user-feign</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
