--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>consumer</module>
         <module>zuul</module>
         <module>config</module>
+        <module>user</module>
     </modules>
 
     <groupId>cc.wangweiye</groupId>
