--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -30,7 +30,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <classifier>exec</classifier>
+<!--                    <classifier>exec</classifier>-->
                 </configuration>
             </plugin>
         </plugins>
