--- a/eureka/src/main/resources/application-peer1.properties
+++ b/eureka/src/main/resources/application-peer1.properties
@@ -1,4 +1,4 @@
-spring.application.name=eureka1
+spring.application.name=eureka
 
 eureka.client.serviceUrl.defaultZone=http://localhost:5687/eureka/
 
