--- a/eureka/src/main/resources/application-peer2.properties
+++ b/eureka/src/main/resources/application-peer2.properties
@@ -1,4 +1,4 @@
-spring.application.name=eureka2
+spring.application.name=eureka
 
 eureka.client.serviceUrl.defaultZone=http://localhost:5678/eureka/
 
