--- a/eureka/src/main/resources/application-peer1.properties
+++ b/eureka/src/main/resources/application-peer1.properties
@@ -1,5 +1,4 @@
-spring.application.name=eureka
-
-eureka.client.serviceUrl.defaultZone=http://localhost:5687/eureka/
-
+spring.application.name=eureka-server
+eureka.instance.hostname=peer1
+eureka.client.serviceUrl.defaultZone=http://peer2:5687/eureka/
 server.port=5678
