--- a/eureka/src/main/resources/application-peer2.properties
+++ b/eureka/src/main/resources/application-peer2.properties
@@ -1,5 +1,4 @@
-spring.application.name=eureka
-
-eureka.client.serviceUrl.defaultZone=http://localhost:5678/eureka/
-
+spring.application.name=eureka-server
+eureka.instance.hostname=peer2
+eureka.client.serviceUrl.defaultZone=http://peer1:5678/eureka/
 server.port=5687
