--- a/consumer/src/main/resources/bootstrap.properties
+++ b/consumer/src/main/resources/bootstrap.properties
@@ -1,14 +1,8 @@
-# info
-info.eureka.host=localhost
-info.eureka.port=5678
-
 # server
 server.port=5680
 
 # eureka
-# eureka.client.serviceUrl.defaultZone=http://${info.eureka.host}:${info.eureka.port}/eureka/
-# 公益eureka
-eureka.client.serviceUrl.defaultZone=http://eureka.didispace.com/eureka/
+eureka.client.serviceUrl.defaultZone=http://47.92.241.17:5678/eureka,http://47.92.241.17:5687/eureka
 eureka.instance.prefer-ip-address=true
 
 spring.application.name=consumer
