--- a/zuul/src/main/resources/application.properties
+++ b/zuul/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # info
-info.eureka.host=localhost
+info.eureka.host=47.92.241.17
 info.eureka.port=5678
 
 # eureka
-# eureka.client.serviceUrl.defaultZone=http://${info.eureka.host}:${info.eureka.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${info.eureka.host}:${info.eureka.port}/eureka/
 # 公益eureka
-eureka.client.serviceUrl.defaultZone=http://eureka.didispace.com/eureka/
+# eureka.client.serviceUrl.defaultZone=http://eureka.didispace.com/eureka/
 eureka.instance.prefer-ip-address=true
 
 # server
