--- a/user/user-service/src/main/resources/application.properties
+++ b/user/user-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=user-service
 
-eureka.client.serviceUrl.defaultZone=http://eureka.didispace.com/eureka/
+eureka.client.serviceUrl.defaultZone=http://47.92.241.17:5678/eureka,http://47.92.241.17:5687/eureka
 eureka.instance.prefer-ip-address=true
 
 server.port=5699
